# mediapipe_face_iris_cpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
src/: FaceLandmark.cpp  FaceLandmark.hpp  demo.cpp
